sort.dutchflag.DutchFlagAlgo.scala.code
def solve() {
  var afterBlue = 0
  var whiteRed = getSize() - 1
  var beforeWhite = getSize() - 1
  
  while(!isSorted()){
    for (i <- 0 to getSize()-1){
      if (i <= afterBlue && getColor(i) != Color.BLUE){
        swap(i,i+1)
        afterBlue += 1
      }
      if (i >= beforeWhite && i <= whiteRed && getColor(i) != Color.WHITE){
          swap(i,i+1)
        whiteRed -= 1
        beforeWhite -=1
        }
      }
    }
  
  
}
}